sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Active__c.field-meta.xml
<CustomField>
    <fullName>VCC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be needed to check if there is an active e911 call</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>