sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Back_Number__c</fullName>
    <description>User&apos;s current phone number so that the system can provide a temporary, local e911 phone number for a validated patient current location address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call-Back Number</label>
    <type>Phone</type>
</CustomField>