sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_City__c.field-meta.xml
<CustomField>
    <fullName>VCC_City__c</fullName>
    <description>Patient&apos;s current location (City)when e911 activated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>