sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>VCC_Date_Activated__c</fullName>
    <description>Date/Time of e911 activation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Activated</label>
    <type>DateTime</type>
</CustomField>