sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_e911_Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>VCC_e911_Progress_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>e911 Progress Note lookup field for associate  Progress Note to an e911 record upon closure</description>
    <label>Progress Note</label>
    <referenceTo>VCC_Progress_Note__c</referenceTo>
    <relationshipLabel>e911 Metrics</relationshipLabel>
    <relationshipName>e911_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>