sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Modality__c.field-meta.xml
<CustomField>
    <fullName>VCC_Modality__c</fullName>
    <description>Modality (phone or video) of the patient visit when e911 activated</description>
    <label>Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>