sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>e911 Patient Account lookup to Contact</description>
    <label>Patient Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>e911 Metrics</relationshipLabel>
    <relationshipName>e911_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>