sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Service__c.field-meta.xml
<CustomField>
    <fullName>VCC_Service__c</fullName>
    <description>Service (Tele-EC Triage, Tele EC MP Visit, CT Triage, VCV, Pharmacy) of user who activated e911</description>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tele-EC Triage</fullName>
            </value>
            <value>
                <fullName>Tele EC MP Visit</fullName>
            </value>
            <value>
                <fullName>CT Triage</fullName>
            </value>
            <value>
                <fullName>VCV</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>