sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_State__c.field-meta.xml
<CustomField>
    <fullName>VCC_State__c</fullName>
    <description>Patient current location(State) when e911 activated</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>