sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Temporary_e911_Number__c.field-meta.xml
<CustomField>
    <fullName>VCC_Temporary_e911_Number__c</fullName>
    <description>Temporary 911 phone number or ECRC phone number provided to user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Temporary e911 Number</label>
    <type>Phone</type>
</CustomField>