sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_User_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_User_VISN__c</fullName>
    <description>VISN of user who activated e911</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User VISN</label>
    <length>60</length>
    <type>Text</type>
</CustomField>