sfdx-source/main/default/objects/VCC_e911_Metrics__c/fields/VCC_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Zip_Code__c</fullName>
    <description>Patient current location(Zip Code) when e911 activated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>